fix: enforce left alignment for header submenu layout

--- a/common/common.scss
+++ b/common/common.scss
@@ -14,19 +14,19 @@ $item-height: 40px;
   .menu-content {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-start !important;
   }
 
   .menu-items {
     display: flex;
     height: $item-height;
+    padding: 0 0.25em;
   }
 
   .menu-item {
     position: relative;
     display: flex;
     align-items: center;
-    gap: var(--size-50);
     color: var(--primary);
     border: none;
     padding: 0 var(--size-200);
